2009-12-23  Jaroslav Hajek  <highegg@gmail.com>

	* strings/strjust.m: Special-case string and empty argument.

2009-12-19  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Eliminate TOPDIR variable in favor of built-in automake
	variables of top_builddir and top_srcdir.

2009-12-18  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Use Automake syntax to build helper program gethelp

2009-12-17  Rik <octave@nomad.inbox5.com>

	* testfun/test.m: Add newline to message output.

2009-12-14  John W. Eaton  <jwe@octave.org>

	* specfun/isprime.m: Produce logical result.  Error if nargin > 1.
	New tests.

2009-12-14  John W. Eaton  <jwe@octave.org>

	* help/__makeinfo__.m: Use fullfile to concatenate file name
	components.  Use hyphens instead of underscores in tmp file name.

2009-12-14  Jaroslav Hajek  <highegg@gmail.com>

	* help/__makeinfo__.m: Use P_tmpdir to create temporary file.

2009-12-09  Rik <octave@nomad.inbox5.com>

	* polynomial/module.mk: Correct typo and distribute newly created ppder.m

2009-12-13  Jaroslav Hajek  <highegg@gmail.com>

	* ppder.m: New function.
	* ppint.m: New function.
	* ppjumps.m: New function.

2009-12-09  Rik <octave@nomad.inbox5.com>

	* Makefile.am: remove install-images target and use automake
	syntax to distribute image data.

2009-12-11  John W. Eaton  <jwe@octave.org>

	* Makefile.am (DOCSTRINGS): Use $(cp_update_rule) instead of
	cp -a --update.

2009-12-09  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Copy DOCSTRINGS from srcdir to builddir if it does not
	exist.  Enables VPATH builds.

2009-12-08  Petr Mikulik <mikulik@physics.muni.cz>

	* plot/gnuplot_drawnow.m: Prune prompt lines from dumb terminal output.
	* plot/__go_draw_figure__.m: Add missing 'unset multiplot' to restore
	hotkey and mouse functionality for 2D plots.

2009-12-09  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Distribute DOCSTRINGS in tar.gz file
	* mkdoc: pass current directory, "./", when running mkdoc on local files
